adding further comments and minor adjustments